@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2013 Intel Corporation and others.
+ * Copyright (c) 2007, 2016 Intel Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -376,7 +376,7 @@ public class SettingsSet {
 		for (EntryInfo info : level.getInfos()) {
 			EntryNameKey key = info.getContentsKey(); 
 			if (!map.containsKey(key))
-				map.put(key, new Object[]{new Integer(l), info.getEntry()});
+				map.put(key, new Object[]{Integer.valueOf(l), info.getEntry()});
 		}
 	}
 	
