@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2012 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -255,13 +255,13 @@ public class LineWrappingTabPage extends FormatterTabPage {
             Boolean forceWrapping;
             
             try {
-                wrappingStyle= new Integer(DefaultCodeFormatterConstants.getWrappingStyle(value));
-                indentStyle= new Integer(DefaultCodeFormatterConstants.getIndentStyle(value));
+                wrappingStyle= Integer.valueOf(DefaultCodeFormatterConstants.getWrappingStyle(value));
+                indentStyle= Integer.valueOf(DefaultCodeFormatterConstants.getIndentStyle(value));
                 forceWrapping= Boolean.valueOf(DefaultCodeFormatterConstants.getForceWrapping(value));
             } catch (IllegalArgumentException e) {
-				forceWrapping= Boolean.valueOf(false);
-				indentStyle= new Integer(DefaultCodeFormatterConstants.INDENT_DEFAULT);
-				wrappingStyle= new Integer(DefaultCodeFormatterConstants.WRAP_NO_SPLIT);
+				forceWrapping= Boolean.FALSE;
+				indentStyle= Integer.valueOf(DefaultCodeFormatterConstants.INDENT_DEFAULT);
+				wrappingStyle= Integer.valueOf(DefaultCodeFormatterConstants.WRAP_NO_SPLIT);
 			} 
 			
             increaseMapEntry(wrappingMap, wrappingStyle);
@@ -272,9 +272,9 @@ public class LineWrappingTabPage extends FormatterTabPage {
         private void increaseMapEntry(Map<Object, Integer> map, Object type) {
             Integer count= map.get(type);
             if (count == null) // not in map yet -> count == 0
-                map.put(type, new Integer(1));
+                map.put(type, Integer.valueOf(1));
             else
-                map.put(type, new Integer(count.intValue() + 1));
+                map.put(type, Integer.valueOf(count.intValue() + 1));
         }
                 
         private void refreshControls(Map<Object, Integer> wrappingStyleMap, Map<Object, Integer> indentStyleMap,
@@ -291,7 +291,7 @@ public class LineWrappingTabPage extends FormatterTabPage {
         private Integer getWrappingStyleMax(Map<Object, Integer> wrappingStyleMap) {
             int maxCount= 0, maxStyle= 0;
             for (int i= 0; i < WRAPPING_NAMES.length; i++) {
-                Integer count= wrappingStyleMap.get(new Integer(i));
+                Integer count= wrappingStyleMap.get(Integer.valueOf(i));
                 if (count == null)
                     continue;
                 if (count.intValue() > maxCount) {
@@ -299,7 +299,7 @@ public class LineWrappingTabPage extends FormatterTabPage {
                     maxStyle= i;
                 }
             }
-            return new Integer(maxStyle);
+            return Integer.valueOf(maxStyle);
         }
         
         private void updateButton(Map<Object, Integer> forceWrappingMap) {
@@ -343,7 +343,7 @@ public class LineWrappingTabPage extends FormatterTabPage {
             int maxCount= 0, maxStyle= 0;
                         
             for(int i = 0; i < items.length; i++) {
-                Integer count= map.get(new Integer(i));
+                Integer count= map.get(Integer.valueOf(i));
                 int val= (count == null) ? 0 : count.intValue();
                 if (val > maxCount) {
                     maxCount= val;
